--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "",
   "scripts": {
     "build": "npm run build:css && remix build",
-    "build:css": "tailwindcss -o ./src/assets/css/tailwind.css",
+    "build:css": "postcss styles/tailwind.css -o ./src/assets/css/tailwind.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "tailwindcss -o ./src/assets/css/tailwind.css --watch",
+    "dev:css": "postcss styles/tailwind.css -o ./src/assets/css/tailwind.css --watch",
     "postinstall": "remix setup node",
     "deploy": "fly deploy --remote-only",
     "start": "remix-serve build"
@@ -17,6 +17,10 @@
     "@fontsource/fira-sans": "^4.5.0",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
+    "@tailwindcss/typography": "^0.5.0",
+    "postcss": "^8.4.5",
+    "postcss-cli": "^9.1.0",
+    "postcss-import": "^14.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "remix": "^1.1.1"
