--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "",
   "scripts": {
     "build": "npm run build:css && remix build",
-    "build:css": "postcss styles/tailwind.css -o ./src/assets/css/tailwind.css",
+    "build:css": "postcss styles/tailwind.css -o ./src/styles/tailwind.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "postcss styles/tailwind.css -o ./src/assets/css/tailwind.css --watch",
+    "dev:css": "postcss styles/tailwind.css -o ./src/styles/tailwind.css --watch",
     "postinstall": "remix setup node",
     "deploy": "fly deploy --remote-only",
     "start": "remix-serve build"
@@ -15,29 +15,32 @@
   "dependencies": {
     "@fontsource/archivo": "^4.5.1",
     "@fontsource/fira-sans": "^4.5.0",
+    "@headlessui/react": "^1.4.2",
+    "@heroicons/react": "^1.0.5",
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
     "@tailwindcss/typography": "^0.5.0",
     "@types/marked": "^4.0.1",
     "clsx": "^1.1.1",
     "front-matter": "^4.0.2",
-    "marked": "^4.0.8",
+    "marked": "^4.0.9",
     "postcss-import": "^14.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-obfuscate-email": "^1.0.12",
     "remix": "^1.1.1",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.1.1",
-    "@types/react": "^17.0.24",
-    "@types/react-dom": "^17.0.9",
-    "autoprefixer": "^10.4.0",
+    "@types/react": "^17.0.38",
+    "@types/react-dom": "^17.0.11",
+    "autoprefixer": "^10.4.2",
     "concurrently": "^7.0.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
-    "tailwindcss": "^3.0.9",
-    "typescript": "^4.1.2"
+    "tailwindcss": "^3.0.12",
+    "typescript": "^4.5.4"
   },
   "engines": {
     "node": ">=14"
