--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^17.0.2",
     "react-obfuscate-email": "^1.0.12",
     "remix": "^1.1.1",
+    "remix-seo": "^0.0.3",
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
