--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "@remix-run/react": "^1.1.1",
     "@remix-run/serve": "^1.1.1",
     "@tailwindcss/typography": "^0.5.0",
+    "cloudinary": "^1.28.1",
+    "cloudinary-build-url": "^0.2.1",
     "clsx": "^1.1.1",
     "front-matter": "^4.0.2",
     "marked": "^4.0.9",
@@ -31,6 +33,7 @@
     "tiny-invariant": "^1.2.0"
   },
   "devDependencies": {
+    "@cld-apis/types": "^0.1.3",
     "@remix-run/dev": "^1.1.1",
     "@types/marked": "^4.0.1",
     "@types/react": "^17.0.38",
