--- a/package.json
+++ b/package.json
@@ -39,6 +39,8 @@
     "concurrently": "^7.0.0",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
+    "prettier": "^2.5.1",
+    "prettier-plugin-tailwindcss": "^0.1.4",
     "tailwindcss": "^3.0.15",
     "typescript": "^4.5.4"
   },
