chore: update package and package.lock.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
+  "name": "luke-mcdonald-remix",
   "private": true,
-  "name": "remix-app-template",
   "description": "",
   "license": "",
   "scripts": {
