--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "isolatedModules": true,
     "esModuleInterop": true,
     "jsx": "react-jsx",
+    "module": "ES2020",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "target": "ES2019",
@@ -13,6 +14,7 @@
     "paths": {
       "~/*": ["./src/*"]
     },
+    "skipLibCheck": true,
 
     // Remix takes care of building everything in `remix build`.
     "noEmit": true
