--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "postcss styles/tailwind.css -o ./src/styles/tailwind.css --watch",
     "postinstall": "remix setup node",
+    "predeploy": "npm run build",
     "deploy": "fly deploy --remote-only",
     "start": "remix-serve build"
   },
