--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "license": "",
   "scripts": {
     "build": "npm run build:css && remix build",
-    "build:css": "postcss styles/tailwind.css -o ./src/styles/tailwind.css",
+    "build:css": "postcss styles/tailwind.css -o ./app/styles/tailwind.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
-    "dev:css": "postcss styles/tailwind.css -o ./src/styles/tailwind.css --watch",
+    "dev:css": "postcss styles/tailwind.css -o ./app/styles/tailwind.css --watch",
     "postinstall": "remix setup node",
     "predeploy": "npm run build",
     "deploy": "fly deploy --remote-only",
