--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "build:css": "postcss styles/tailwind.css -o ./app/styles/tailwind.css",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "postcss styles/tailwind.css -o ./app/styles/tailwind.css --watch",
+    "format": "prettier --write .",
     "postinstall": "remix setup node",
     "predeploy": "npm run build",
     "deploy": "fly deploy --remote-only",
