--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "postcss styles/tailwind.css -o ./app/styles/tailwind.css --watch",
     "format": "prettier --write .",
+    "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "postinstall": "remix setup node",
     "predeploy": "npm run build",
     "deploy": "fly deploy --remote-only",
@@ -34,11 +35,15 @@
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
     "@remix-run/dev": "^1.4.0",
+    "@remix-run/eslint-config": "^1.4.0",
+    "@types/eslint": "^8.4.1",
     "@types/marked": "^4.0.3",
     "@types/react": "^18.0.5",
     "@types/react-dom": "^18.0.1",
     "autoprefixer": "^10.4.4",
     "concurrently": "^7.1.0",
+    "eslint": "^8.12.0",
+    "eslint-config-prettier": "^8.5.0",
     "postcss": "^8.4.12",
     "postcss-cli": "^9.1.0",
     "prettier": "^2.6.2",
@@ -46,6 +51,11 @@
     "tailwindcss": "^3.0.24",
     "typescript": "^4.6.3"
   },
+  "eslintIgnore": [
+    "/node_modules",
+    "/build",
+    "/public/build"
+  ],
   "engines": {
     "node": ">=14"
   },
