--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "remix": "^1.4.0",
-    "tiny-invariant": "^1.2.0"
+    "tiny-invariant": "^1.2.0",
+    "use-local-storage-state": "^17.0.1"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
