--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "dev:css": "postcss styles/tailwind.css -o ./app/styles/tailwind.css --watch",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
-    "postinstall": "remix setup node",
     "predeploy": "npm run build",
     "deploy:remote": "fly deploy --remote-only",
     "deploy:local": "fly deploy --local-only",
@@ -20,6 +19,7 @@
   "dependencies": {
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
+    "@remix-run/node": "^1.6.7",
     "@remix-run/react": "^1.6.7",
     "@remix-run/serve": "^1.6.7",
     "@tailwindcss/typography": "^0.5.4",
@@ -31,7 +31,6 @@
     "postcss-import": "^14.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "remix": "^1.6.7",
     "tiny-invariant": "^1.2.0",
     "use-local-storage-state": "^18.1.0"
   },
