chore: update packages

--- a/package.json
+++ b/package.json
@@ -18,42 +18,43 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@headlessui/react": "^1.6.6",
-    "@heroicons/react": "^2.0.11",
-    "@remix-run/node": "^1.6.7",
-    "@remix-run/react": "^1.6.7",
-    "@remix-run/serve": "^1.6.7",
-    "@tailwindcss/typography": "^0.5.4",
-    "cloudinary": "^1.30.1",
+    "@headlessui/react": "^1.7.17",
+    "@heroicons/react": "^2.0.18",
+    "@remix-run/node": "^1.19.3",
+    "@remix-run/react": "^1.19.3",
+    "@remix-run/serve": "^1.19.3",
+    "@tailwindcss/typography": "^0.5.9",
+    "cloudinary": "^1.40.0",
     "cloudinary-build-url": "^0.2.4",
-    "clsx": "^1.2.1",
+    "clsx": "^2.0.0",
     "front-matter": "^4.0.2",
-    "marked": "^4.0.18",
-    "postcss-import": "^14.1.0",
+    "marked": "^8.0.0",
+    "postcss-import": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tiny-invariant": "^1.2.0",
-    "use-local-storage-state": "^18.1.0"
+    "tiny-invariant": "^1.3.1",
+    "use-local-storage-state": "^19.0.4"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
-    "@remix-run/dev": "^1.6.7",
-    "@remix-run/eslint-config": "^1.6.7",
-    "@types/eslint": "^8.4.5",
-    "@types/marked": "^4.0.3",
-    "@types/react": "^18.0.15",
-    "@types/react-dom": "^18.0.6",
-    "autoprefixer": "^10.4.8",
-    "concurrently": "^7.3.0",
-    "eslint": "^8.21.0",
-    "eslint-config-prettier": "^8.5.0",
-    "husky": "^8.0.0",
-    "postcss": "^8.4.14",
-    "postcss-cli": "^10.0.0",
-    "prettier": "^2.7.1",
-    "prettier-plugin-tailwindcss": "^0.1.13",
-    "tailwindcss": "^3.1.8",
-    "typescript": "^4.7.4"
+    "@remix-run/dev": "^1.19.3",
+    "@remix-run/eslint-config": "^1.19.3",
+    "@types/eslint": "^8.44.2",
+    "@types/marked": "^5.0.1",
+    "@types/react": "^18.1.21",
+    "@types/react-dom": "^18.2.7",
+    "@typescript-eslint/parser": "^6.5.0",
+    "autoprefixer": "^10.4.15",
+    "concurrently": "^8.2.1",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "husky": "^8.0.3",
+    "postcss": "^8.4.29",
+    "postcss-cli": "^10.1.0",
+    "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.4",
+    "tailwindcss": "^3.3.3",
+    "typescript": "^5.2.2"
   },
   "eslintIgnore": [
     "/node_modules",
