--- a/package.json
+++ b/package.json
@@ -6,50 +6,50 @@
   "scripts": {
     "build": "npm run build:css && remix build",
     "build:css": "postcss styles/tailwind.css -o ./app/styles/tailwind.css",
+    "deploy": "fly --app lukemcdonald deploy .",
+    "deploy:local": "fly deploy --local-only",
+    "deploy:remote": "fly deploy --remote-only",
     "dev": "concurrently \"npm run dev:css\" \"remix dev\"",
     "dev:css": "postcss styles/tailwind.css -o ./app/styles/tailwind.css --watch",
     "format": "prettier --write .",
     "lint": "eslint --cache --cache-location ./node_modules/.cache/eslint .",
     "predeploy": "npm run build",
-    "deploy:remote": "fly deploy --remote-only",
-    "deploy:local": "fly deploy --local-only",
-    "deploy": "fly --app lukemcdonald deploy .",
-    "start": "remix-serve build",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "start": "remix-serve build"
   },
   "dependencies": {
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
-    "@remix-run/node": "^1.19.3",
-    "@remix-run/react": "^1.19.3",
-    "@remix-run/serve": "^1.19.3",
-    "@tailwindcss/typography": "^0.5.9",
-    "cloudinary": "^1.40.0",
+    "@remix-run/node": "2.0.1",
+    "@remix-run/react": "2.0.1",
+    "@remix-run/serve": "2.0.1",
+    "@tailwindcss/typography": "^0.5.10",
+    "cloudinary": "^1.41.0",
     "cloudinary-build-url": "^0.2.4",
     "clsx": "^2.0.0",
     "front-matter": "^4.0.2",
-    "marked": "^8.0.0",
+    "marked": "^9.0.3",
     "postcss-import": "^15.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "tiny-invariant": "^1.3.1",
-    "use-local-storage-state": "^19.0.4"
+    "use-local-storage-state": "^19.1.0"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
-    "@remix-run/dev": "^1.19.3",
-    "@remix-run/eslint-config": "^1.19.3",
-    "@types/eslint": "^8.44.2",
-    "@types/marked": "^5.0.1",
-    "@types/react": "^18.1.21",
-    "@types/react-dom": "^18.2.7",
-    "@typescript-eslint/parser": "^6.5.0",
-    "autoprefixer": "^10.4.15",
+    "@remix-run/dev": "2.0.1",
+    "@remix-run/eslint-config": "2.0.1",
+    "@types/eslint": "^8.44.3",
+    "@types/marked": "^5.0.2",
+    "@types/react": "^18.2.23",
+    "@types/react-dom": "^18.2.8",
+    "@typescript-eslint/parser": "^6.7.3",
+    "autoprefixer": "^10.4.16",
     "concurrently": "^8.2.1",
-    "eslint": "^8.48.0",
+    "eslint": "^8.50.0",
     "eslint-config-prettier": "^9.0.0",
     "husky": "^8.0.3",
-    "postcss": "^8.4.29",
+    "postcss": "^8.4.31",
     "postcss-cli": "^10.1.0",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.4",
